--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "license": "ISC",
   "devDependencies": {
     "@types/puppeteer": "^5.4.2",
+    "@types/redis": "^2.8.28",
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "puppeteer": "^5.5.0"
+    "puppeteer": "^5.5.0",
+    "redis": "^3.0.2",
+    "url": "^0.11.0"
   }
 }
