--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsc --watch",
-    "start": "tsc && export NODE_ENV=product && node ./build/index.js"
+    "start": "tsc && export NODE_ENV=product && node ./build/index.js --unhandled-rejections=strict"
   },
   "author": "",
   "license": "ISC",
